fix same height for input/select on firefox

--- a/scss/components/form/_input.scss
+++ b/scss/components/form/_input.scss
@@ -8,6 +8,7 @@ $input-font-family:      $font-family-base !default;
 $input-font-size:        $font-size-base !default;
 $input-font-style:       normal !default;
 $input-line-height:      1.15 !default;
+$input-height:           2.5em !default;
 
 $input-padding:          .5em .625em !default; // relative to the size of the input
 $input-padding-sizes:    () !default;
@@ -46,6 +47,7 @@ $label-margin:           .3rem !default;
     font-size: $input-font-size;
     font-style: $input-font-style;
     line-height: $input-line-height;
+    height: $input-height;
 
     border: $input-border;
     border-radius: $input-border-radius;
